# Sybil

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  dispatcher.py  inference.py  inference_fennie.py  mhatodicom.py  pyproject.toml  setup.cfg  setup.py  tox.ini  unstackandordermha.py
.github/workflows/: publish.yml  test.yml
Docker_Sybil/: Dockerfile  requirements.txt
configs/: baseline_survival.json  eval_baseline.json  eval_pred_risk_factors.json  eval_r3d.json  pred_risk_factor.json  r3d.json
core/datasets/: __init__.py  abstract_ct_dataset.py  abstract_dataset.py
core/losses/: basicloss.py
core/models/: cumulative_probability_layer.py
docs/: authors.md  changelog.md  conf.py  env.txt  env.yml  index.md  readme.md  requirements.txt
examples/: local.py  remote_ark.py  utils.py
files/: Shetty_et_al(Google)_data_splits.p  corrupted_img_paths.pkl  lung_cancer_dataset.csv  lung_cancer_metadata.csv  nlst_annotations.json  pad.tif
scripts/: evaluate.py  inference.py  run_inference_demo.sh  run_predict_demo.sh  train.py  train_jointly.py  utils.py
scripts/data/: create_nlst_metadata_json.py  parse_mdai_annotations.py
scripts/plcom2012/: evaluate.py  plcom2012.py
scripts/train/: create_nlst_metadata_json.py  lightning.py  run_traditional_models.py  train.py
sybil/: __init__.py  augmentations.py  model.py  parsing.py  predict.py  serie.py
sybil/augmentations/: abstract.py  basic.py  factory.py  image.py  tensor.py
sybil/core/: core_utils.py  distributed_weighted_sampler.py  model.py  parsing.py
sybil/core/augmentations/: abstract.py  basic.py  factory.py  image.py  tensor.py
sybil/core/datasets/: abstract_dataset.py  nlst_lung_cancer.py  nlst_risk_factors.py  utils.py
sybil/core/loaders/: factory.py  image_loaders.py
sybil/core/losses/: ctloss.py
sybil/core/metrics/: basicmetric.py  survival.py
sybil/core/models/: pooling_layer.py  sybil.py
sybil/core/utils/: losses.py  metrics.py
sybil/datasets/: abstract_dataset.py  joint_nlst_mgh.py  mgh.py  nlst.py  nlst_dataset.py  sybil.py  utils.py  validation.py
sybil/loaders/: abstract_loader.py  image_loaders.py
sybil/models/: adversary.py  calibrator.py  cumulative_probability_layer.py  plcom2012.py  pooling_layer.py  sybil.py
sybil/selector/: features.py  model.py
sybil/utils/: device_utils.py  download.py  helpers.py  loading.py  logging_utils.py  losses.py  metrics.py  visualization.py
sybil/utils2/: loading.py  sampler.py
tests/: regression_test.py  test_create_sybilnet.py
