# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = sybil
description = Sybil
author = Peter G. Mikhael
author_email = 
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
version = 1.4.0
# url = 
project_urls =
    Documentation = https://github.com/reginabarzilaygroup/sybil/wiki
    Source = https://github.com/reginabarzilaygroup/sybil
    Tracker = https://github.com/reginabarzilaygroup/sybil/issues


# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python

[easy_install]
find_links =
    https://download.pytorch.org/whl/cu117/torch_stable.html

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8,<3.11
# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version>="3.8"
    albumentations==1.1.0
    numpy==1.24.1
    opencv-python==4.5.4.60
    opencv-python-headless==4.5.4.60
    pillow>=10.2.0
    pydicom==2.3.0
    pylibjpeg[all]==2.0.0
    scikit-learn==1.0.2
    torch==1.13.1+cu117; platform_machine == "x86_64"
    torch==1.13.1; platform_machine != "x86_64"
    torchio==0.18.74
    torchvision==0.14.1+cu117; platform_machine == "x86_64"
    torchvision==0.14.1; platform_machine != "x86_64"
    tqdm==4.62.3

[options.packages.find]
exclude =
    tests


[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    flake8
    mypy
    black
train =
    lifelines==0.26.4
    pytorch_lightning==1.6.0

[options.entry_points]
console_scripts =
    sybil-predict = sybil.predict:main


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel


[tool:pytest]
norecursedirs =
    .git
    dist
    build
    .tox
addopts =
    --verbose
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[flake8]
max-line-length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = 
    .tox
    *.egg
    build
    temp
    docs/*
    tests/*
    dist

[mypy]
ignore_missing_imports = True
allow_redefinition = True
; follow_imports = skip
; warn_unused_configs = True
